# projetos_rafael

./: README.md  pyproject.toml
notebooks/: projeto_ds.ipynb
